# astro-camera-mount-firmware

./: .$schematic.drawio.bkp  Cargo.toml  README.md  schematic.drawio
.cargo/: config.toml
changelog/: changelog.md
src/: drivers.rs  main.rs  protocol.rs  tests.rs
src/drivers/: servo.rs  stepper.rs
src/protocol/: comands.rs  message.rs  parser.rs  protocol.rs
src/tests/: parsing_test.rs  tester.rs
